--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "lint": "npx eslint -c .eslintrc.js --fix --color --ignore-path .eslintignore \"index.js\"",
     "prettier": "npx prettier --config .prettierrc.js --write \"index.js\"",
     "clean": "npm-run-all prettier lint",
-    "test": "jest --verbose",
-    "release": "npx np"
+    "test": "jest --verbose"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -49,7 +48,6 @@
     "eslint": "5.16.0",
     "eslint-config-belsrc": "1.0.1",
     "jest": "24.8.0",
-    "np": "5.0.3",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
     "vue": "2.6.10",
