--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "npx eslint -c .eslintrc.js --fix --color --ignore-path .eslintignore \"index.js\"",
     "prettier": "npx prettier --config .prettierrc.js --write \"index.js\"",
     "clean": "npm-run-all prettier lint",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "coverage": "jest --verbose --coverage && codecov -t f3e4d4b5-4577-447e-8eea-8771c16e16f9"
   },
   "jest": {
     "testPathIgnorePatterns": [
