--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   },
   "version": "1.0.0",
   "description": "Wrap a functional component in order to test against it",
-  "main": "index.js",
+  "main": "dist/index.js",
   "files": [
-    "index.js"
+    "dist"
   ],
   "scripts": {
-    "lint": "npx eslint -c .eslintrc.js --fix --color --ignore-path .eslintignore \"index.js\"",
-    "prettier": "npx prettier --config .prettierrc.js --write \"index.js\"",
+    "lint": "npx eslint -c .eslintrc.js --fix --color --ignore-path .eslintignore \"src/**/*.js\"",
+    "prettier": "npx prettier --config .prettierrc.js --write \"src/**/*.js\"",
     "clean": "npm-run-all prettier lint",
     "test": "jest --verbose",
-    "coverage": "jest --verbose --coverage && codecov"
+    "coverage": "jest --verbose --coverage && codecov",
+    "build": "npx babel src --out-dir dist --ignore **/*.test.js",
+    "release": "npx release-it",
+    "pub": "npm-run-all build release"
   },
   "jest": {
     "coverageDirectory": "coverage",
@@ -22,6 +25,17 @@
       "/node_modules/"
     ],
     "testEnvironment": "jsdom"
+  },
+  "release-it": {
+    "git": {
+      "requireUpstream": false,
+      "addUntrackedFiles": false,
+      "requireCleanWorkingDir": true,
+      "changelog": "git log --pretty=format:\"* %s (%h)\" ${latestTag}...HEAD",
+      "commitMessage": "chore(build): release ${version}",
+      "tagName": "v${version}",
+      "tagAnnotation": "Release v${version}"
+    }
   },
   "repository": {
     "type": "git",
@@ -42,17 +56,21 @@
     "component"
   ],
   "devDependencies": {
+    "@babel/cli": "7.4.4",
     "@babel/core": "7.4.5",
+    "@babel/plugin-transform-modules-commonjs": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@babel/register": "7.4.4",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "10.0.1",
+    "babel-plugin-annotate-pure-calls": "0.4.0",
     "codecov": "3.5.0",
     "eslint": "5.16.0",
     "eslint-config-belsrc": "1.0.1",
     "jest": "24.8.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
+    "release-it": "12.3.0",
     "vue": "2.6.10",
     "vue-template-compiler": "2.6.10"
   }
