--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dist"
   ],
   "scripts": {
+    "check": "npm-check -u",
     "lint": "npx eslint -c .eslintrc.js --fix --color --ignore-path .eslintignore \"**/*.{js,jsx,ts,tsx}\"",
     "prettier": "npx prettier --config .prettierrc.js --write \"**/*.{js,jsx,ts,tsx,md,html}\"",
     "clean": "npm-run-all prettier lint",
@@ -57,20 +58,21 @@
   ],
   "devDependencies": {
     "@babel/cli": "7.6.4",
-    "@babel/core": "7.4.5",
+    "@babel/core": "7.6.4",
     "@babel/plugin-transform-modules-commonjs": "7.6.0",
-    "@babel/preset-env": "7.4.5",
-    "@babel/register": "7.4.4",
+    "@babel/preset-env": "7.6.3",
+    "@babel/register": "7.6.2",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "10.0.3",
     "babel-plugin-annotate-pure-calls": "0.4.0",
-    "codecov": "3.5.0",
-    "eslint": "5.16.0",
-    "eslint-config-belsrc": "1.0.1",
+    "codecov": "3.6.1",
+    "eslint": "6.5.1",
+    "eslint-config-belsrc": "1.1.0",
     "jest": "24.9.0",
+    "npm-check": "5.9.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
-    "release-it": "12.3.0",
+    "release-it": "12.4.3",
     "vue": "2.6.10",
     "vue-template-compiler": "2.6.10"
   }
